cabal-version:       2.4

name:                fts
version:             0.1.0.0
synopsis:            Postgres full-text search playground
license:             Apache-2.0
license-file:        LICENSE
author:              Gabriel Volpe
maintainer:          volpegabriel@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Domain.Movie
                     , Effects.Display
                     , Effects.Logger
                     , Resources
                     , Services.Movies
  build-depends:       base
                     , aeson
                     , ansi-terminal
                     , async
                     , bytestring
                     , co-log-core
                     , containers
                     , exceptions
                     , generic-lens
                     , lens
                     , managed
                     , par-dual
                     , postgresql-resilient
                     , postgresql-simple
                     , prettyprinter
                     , raw-strings-qq
                     , template-haskell
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-Suite fts-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , hedgehog
                     , fts
                     , template-haskell
                     , text
                     , uuid
  default-language:     Haskell2010
  ghc-options:         -Wall -threaded -with-rtsopts -N

executable fts
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base
                     , ansi-terminal
                     , managed
                     , fts
  default-language:    Haskell2010
  ghc-options:         -Wall
