cabal-version:       2.4

name:                fts
version:             0.1.0.0
synopsis:            Postgres full-text search playground
license:             Apache-2.0
license-file:        LICENSE
author:              Gabriel Volpe
maintainer:          volpegabriel@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Domain.Movie
                     , Effects.Display
                     , Resources
                     , Services.Movies
  build-depends:       base
                     , aeson
                     , ansi-terminal
                     , containers
                     , exceptions
                     , managed
                     , monomer
                     , postgresql-resilient
                     , postgresql-simple
                     , prettyprinter
                     , raw-strings-qq
                     , template-haskell
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-Suite fts-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , hedgehog
                     , fts
                     , template-haskell
                     , text
  default-language:     Haskell2010
  ghc-options:         -Wall -threaded -with-rtsopts -N

executable fts
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base
                     , ansi-terminal
                     , generic-lens
                     , lens
                     , managed
                     , fts
  default-language:    Haskell2010
  ghc-options:         -Wall

executable fts-ui
  main-is:             Main.hs
  other-modules:       Handler
                     , HTTP.Posters
                     , Types.Movie
                     , UI.Movies
                     , UI.Themes
                     , UI.Widgets.MovieDetail
                     , UI.Widgets.MovieImage
                     , UI.Widgets.MovieRow
                     , Utils
  hs-source-dirs:      ui
  build-depends:       base
                     , aeson
                     , data-default
                     , extra
                     , generic-lens
                     , lens
                     , managed
                     , monomer
                     , text
                     , text-show
                     , wreq
                     , fts
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
